# Gomguk-BE

./: .env.example  .gitignore  API-SPEC.md  MAB_ThompsonSampling_PaperReco_Plan.txt  PaperReco_TS_Matrix_Implementation.txt  README.md  docker-compose.yml  package-lock.json  package.json
backend/: README.md  alembic.ini  init_db_script.py  pyproject.toml  requirements.txt  seed_dummy_data.py
backend/Gomguk.egg-info/: PKG-INFO  SOURCES.txt
backend/app/: crud.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/can/: 041d76544861_email_nullable.py  702a28378175_tag_enum.py  72b70c3e1103_init.py  8b5aafb907c3_del_user_in_userauthidentity.py  902854bb8b00_init.py
backend/app/alembic/versions/: 0ce0a9399b61_init.py  4f3c2d1a9b77_drop_users_name_unique.py  5598dcae858c_init.py  85505e1fedd6_db_update_0212.py  913f0ac868a3_init.py  a031dc8879d1_init.py  bbd5140ebbe7_init.py  e479eaf2e4c3_init.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: add.py  auth.py  event.py  feed.py  me.py  mypage.py  oauth.py  onboarding.py  paper.py  search.py  summary.py  tags.py  test.py
backend/app/app(old)/: main.py
backend/app/app(old)/api/: routers.py
backend/app/core/: config.py  cookies.py  db.py  enums.py  init_db_once.py  security.py  storage.py
backend/app/crud/: event.py  paper.py  user.py
backend/app/models/: __init__.py  event.py  folder.py  paper.py  user.py
backend/app/schemas/: PaperFeed.py  PaperRead.py  paper.py  token_payload.py
backend/tests/: test_multi_prompt_profile_contract.py
config/: airflow.cfg  (+1 more)
(+39 files in other folders)
